Fix tiny spacings inaccuracy

--- a/src/dibgram/messenger/ui/navigation-menu/chat-folders.scss
+++ b/src/dibgram/messenger/ui/navigation-menu/chat-folders.scss
@@ -42,7 +42,7 @@
                 font-size: 11px;
                 line-height: 16px;
                 font-weight: 500;
-                margin-top: -4px;
+                margin-top: -5px;
                 color: var(--theme-color-sideBarTextFg);
             }
 
